[gd_scene load_steps=7 format=3 uid="uid://c5jgoujkbrge5"]

[ext_resource type="Script" uid="uid://cn07ofvgbk2n7" path="res://src/ui/account_management/authentication/authenticate.gd" id="1_opvkw"]
[ext_resource type="FontFile" uid="uid://d01bkxkrxln5h" path="res://src/ui/fonts/boogaloo/Boogaloo-Regular.ttf" id="2_mu1cn"]
[ext_resource type="PackedScene" uid="uid://tckwwg0vm5q5" path="res://src/world/overworld_map/overworld_map.tscn" id="2_pkhyw"]
[ext_resource type="Texture2D" uid="uid://bs23pnesr5w0g" path="res://src/ui/icons/settings.png" id="4_nj3ry"]
[ext_resource type="Texture2D" uid="uid://bkami5w56ym1j" path="res://src/ui/icons/info.png" id="5_da5bx"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jicmd"]
bg_color = Color(0, 0.568018, 0.919692, 1)

[node name="LoginAnonymous" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_jicmd")
script = ExtResource("1_opvkw")
next_scene = ExtResource("2_pkhyw")
metadata/_edit_lock_ = true

[node name="GameName" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 124.0
offset_bottom = 366.0
grow_horizontal = 2
size_flags_vertical = 2
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("2_mu1cn")
theme_override_font_sizes/normal_font_size = 200
bbcode_enabled = true
text = "[center][wave freq=4]BLIMP JOURNEY"
fit_content = true

[node name="MessageLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -180.0
offset_bottom = -157.667
grow_horizontal = 2
grow_vertical = 0
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="TechInfo" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
mouse_filter = 2

[node name="VersionLabel" type="Label" parent="MarginContainer/TechInfo"]
unique_name_in_owner = true
layout_mode = 2
text = "v1.0.0"

[node name="UIDLabel" type="Label" parent="MarginContainer/TechInfo"]
unique_name_in_owner = true
layout_mode = 2
text = "UID: Not logged in"

[node name="Options" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
mouse_filter = 2

[node name="SettingsButton" type="TextureButton" parent="MarginContainer/Options"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
focus_mode = 0
texture_normal = ExtResource("4_nj3ry")
ignore_texture_size = true
stretch_mode = 5

[node name="InfoButton" type="TextureButton" parent="MarginContainer/Options"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
focus_mode = 0
texture_normal = ExtResource("5_da5bx")
ignore_texture_size = true
stretch_mode = 5

[node name="Subscenes" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
